--- a/fundamentos/03-introducao-a-html-e-css/03-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/03-introducao-a-html-e-css/03-2-html-css-primeiros-passos-em-css/index.html
@@ -3,25 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title> CSS Básico</title>
+    <style>
+        
+        h2 {
+            color: green;
+        }
+
+        body {
+            background-color: rgb(255, 400, 200);
+        }
+        #extinct-especie {
+            background-color: red;
+        }
+
+        #description {
+            color: orange;
+        }
+
+        .list-style {
+            background-color: blue;
+            color: white;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Tudo sobre a Sequoia-gigante</h1>
     <img src="http://2.bp.blogspot.com/-EecX12EQ8-c/VSVqRl6mlDI/AAAAAAAAPfE/n_s6PVDzRWM/s1600/sequoiaForestCalifornia.JPG" alt="A sequoia-gigante é grande mesmo!" width="400px">
 
-    <h2>Descrição:</h2>
+    <h2 id="description">Descrição:</h2>
 
     <p>A sequoia-gigante é a maior arvore do <strong>mundo</strong> em termos de volume. Ela atinge em media de 85-115m de altura e 8-12m de diametro. A sequoia-gigante mais velha conhecida possui <em>4.650 anos</em>de idade e se encontra no <strong>Parque Nacional Sequoia</strong>na California.</p>
 
     <h2>Especie Extinta</h2>
 
-    <p>Apesar de ter sido dito que existiam <br>
+    <p id="extinct-especie">Apesar de ter sido dito que existiam <br>
     apenas duas especies de sequoias no mundo, <br>
     ainda tem uma terceira: A Metasequoia glyotostroboides<br>
     Contudo, ..... </p>
 
     <h3>Locais onde predominam:</h3>
 
-    <ul>
+    <ul class="list-style">
         <li>Yosemite National Park</li>
         <li>Kings Canyon National Park</li>
         <li>Sequoia National Park</li>
@@ -29,7 +52,7 @@
 
     <h3>Arvores comuns no Brasil:</h3>
 
-    <ol> 
+    <ol class="list-style"> 
         <li>Aroeira</li>
         <li>Jatoba</li>
         <li>Pau-Brasil</li>
