--- a/fundamentos/03-introducao-a-html-e-css/03-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/03-introducao-a-html-e-css/03-2-html-css-primeiros-passos-em-css/index.html
@@ -7,11 +7,18 @@
         
         h2 {
             color: green;
+            font-size: 2em;
         }
 
         body {
             background-color: rgb(255, 400, 200);
+            font-size: 20px;
         }
+
+        p {
+            font-family: monospace;
+        }
+
         #extinct-especie {
             background-color: red;
         }
@@ -23,9 +30,14 @@
         .list-style {
             background-color: blue;
             color: white;
+            font-weight: bold;
+            font-style: italic;
+            line-height: 40px;
+            text-align: center;
+            text-decoration: underline;
         }
 
-    </style>
+    </style> 
 </head>
 <body>
     <h1>Tudo sobre a Sequoia-gigante</h1>
