--- a/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-3/index.html
+++ b/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-3/index.html
@@ -14,5 +14,10 @@
         <li><a href="https://www.pienso.com/" target="_blank">Pienso</a>;</li>
     </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>Interatividade;</li>
+        <li>Design;</li>
+        <li>Fácil entendimento;</li>
+    </ul>
   </body>
 </html>
