--- a/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
+++ b/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
@@ -38,6 +38,14 @@
         width: 300px;
       }
 
+      .prizes {
+        text-align: center;
+      }
+
+      .prizes li {
+        display: inline;
+      }
+
     </style>
   </head>
   <body>
@@ -51,7 +59,7 @@
         <li class="third">3º - Equipe 3</li>
       </ul>
     </section>
-    <section>
+    <section class="prizes">
       <h3>Premiação Primeiro Lugar:</h3>
       <ul>
         <li>| R$ 1000,00 por integrante da equipe |</li>
