Acrescenta as estilizações para os dois retangulos de baixo - 2º e 3º lugar

--- a/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
+++ b/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
@@ -13,6 +13,12 @@
         list-style: none;
       }
 
+      .center { 
+        margin-left: auto; 
+        margin-right: auto; 
+        text-align:center; 
+      }
+
       .first {
         background-color: rgb(235, 200, 84);
         font-size: 20px;
@@ -28,6 +34,7 @@
         height: 50px;
         text-align: center;
         width: 300px;
+        display: inline-block;
       }
 
       .third {
@@ -36,6 +43,8 @@
         height: 50px;
         text-align: center;
         width: 300px;
+        display: inline-block;
+        margin: 0px auto;
       }
 
       .prizes {
@@ -46,6 +55,7 @@
         display: inline;
       }
 
+
     </style>
   </head>
   <body>
@@ -55,8 +65,10 @@
     <section>
       <ul>
         <li class="first">1º - Equipe 1</li>
-        <li class="second">2º - Equipe 2</li>
-        <li class="third">3º - Equipe 3</li>
+        <div class="center">
+          <li class="second">2º - Equipe 2</li>
+          <li class="third">3º - Equipe 3</li>
+        </div>
       </ul>
     </section>
     <section class="prizes">
