--- a/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
+++ b/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-  </head>
-  <body>
-    <header> 
+</head>
+
+<body>
+    <header>
         <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
-    </header>    
+    </header>
     <nav>
         <ul>
             <li><a href="">Página Inicial</a></li>
@@ -15,5 +17,10 @@
             <li><a href="">Contato</a></li>
         </ul>
     </nav>
-  </body>
+    <main>
+        <article>
+            <h3>Fatos sobre o Stomatopoda</h3>
+        </article>
+</body>
+
 </html>
