Exercicio Pratico - adiciona a primeira seção do artigo, denominada Dados Iniciais

--- a/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
+++ b/fundamentos/03-introducao-a-html-e-css/03-4-html-css-html-semantico/03-4-exercicio/index.html
@@ -19,7 +19,26 @@
     </nav>
     <main>
         <article>
-            <h3>Fatos sobre o Stomatopoda</h3>
+            <h2>Fatos sobre o Stomatopoda</h2>
+            <section>
+                <h3>Dados Iniciais</h3>
+                <p>
+                    <strong>Nome Científico:</strong> <em>Odontodactylus scyllarus</em>
+                    <br>
+                    <strong>Reino</strong> Animalia
+                    <br>
+                    <strong>Filo:</strong> Arthropoda
+                    <br>
+                    <strong> Subfilo:</strong> Crustacea
+                    <br>
+                    <strong> Classe:</strong> Malacostraca
+                    <br>
+                    <strong> Subclasse:</strong> Hoplocarida
+                    <br>
+                    <strong>Ordem:</strong> Stomatopoda
+                    <br>
+                </p>
+            </section>
         </article>
 </body>
 
