--- a/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
@@ -61,7 +61,12 @@
         /*
         2. Crie e execute uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
         */
+        function changeColor () {
+            let retangle = document.getElementsByClassName('main-content')[0];
+            retangle.style.backgroundColor = 'rgb(76,164,109)';
+        }
 
+        changeColor();
 
         /*
         3. Crie e execute uma função que mude a cor do quadrado vermelho para branco.
