Resolve o terceiro exercicio

--- a/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
@@ -72,6 +72,13 @@
         3. Crie e execute uma função que mude a cor do quadrado vermelho para branco.
         */
         
+        function changeColor2 () {
+            let retangle2 = document.getElementsByClassName('center-content')[0];
+            retangle2.style.backgroundColor = 'white';
+        }
+
+        changeColor2();
+
         /*
         4. Crie e execute uma função que corrija o texto da tag <h1>.
         */
