Resolve o quarto exercicio

--- a/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
@@ -83,6 +83,13 @@
         4. Crie e execute uma função que corrija o texto da tag <h1>.
         */
         
+        function correctText () {
+            titulo2 = document.getElementsByTagName('h1')[0];
+            titulo2.innerText = 'Exercício 5.1 - JavaScript';
+        }
+
+        correctText();
+
         /*
         5. Crie e execute uma função que modifique todo o texto da tag <p> para maiúsculo.
         */
