--- a/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/05-javascript-dom-eventos-e-web-storage/05-1-javascript-dom-e-seletores/index.html
@@ -61,7 +61,7 @@
         /*
         2. Crie e execute uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
         */
-        function changeColor () {
+        function changeColor() {
             let retangle = document.getElementsByClassName('main-content')[0];
             retangle.style.backgroundColor = 'rgb(76,164,109)';
         }
@@ -71,8 +71,8 @@
         /*
         3. Crie e execute uma função que mude a cor do quadrado vermelho para branco.
         */
-        
-        function changeColor2 () {
+
+        function changeColor2() {
             let retangle2 = document.getElementsByClassName('center-content')[0];
             retangle2.style.backgroundColor = 'white';
         }
@@ -82,8 +82,8 @@
         /*
         4. Crie e execute uma função que corrija o texto da tag <h1>.
         */
-        
-        function correctText () {
+
+        function correctText() {
             titulo2 = document.getElementsByTagName('h1')[0];
             titulo2.innerText = 'Exercício 5.1 - JavaScript';
         }
@@ -94,9 +94,20 @@
         5. Crie e execute uma função que modifique todo o texto da tag <p> para maiúsculo.
         */
 
+        function upperCase() {
+            let paragraphs = document.getElementsByTagName("p");
+
+            for (keys in paragraphs) {
+                paragraphs[keys].innerText = paragraphs[keys].innerText.toUpperCase();
+            }
+        }
+        upperCase();
+
         /*
         6. Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
         */
+
+
     </script>
 </body>
 
